# mmorpg.rs

./: Cargo.toml
assets/shaders/: pixelate.wgsl
src/: main.rs  shader.rs
